--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -288,17 +288,32 @@ We must justify this interpretation. While ours is a model that departs from tho
 \subsubsection{Desiderata of a Static Base}
 In constructing our static base, we must identify the desirable features to be achieved. In laying out these desirable features, we motivate our model combining knowledge and belief. 
 
-First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
+First, the model should be well-balanced in the trade off of normativity \emph{vs.} realism so that it can be used to analyze real-world cases as well as idealize formal cases.
 
-Theories of bounded rationality achieve more realism, but the trade off of realism and normativity is not clearly in their favor. By keeping the S5 knowledge operator and limiting the agents' epistemic depth, theories of bounded rationality seek to model actual human behavior in the rarefied world of games of perfect information, where the agents know the payoff structure and the game tree or game matrix. The realism of this latter assumption is dubious, and therefore the theory's applicability is limited. Likewise, theories of bounded rationality with S5 knowledge do not offer clear normative prescriptions or evaluative guidelines. Rather, it appears to be an attempt to makes sense of the following finding of behavioral economics: In some situations, human agents depart from the Nash equilibrium, and they both end up with higher payoffs. The centipede game is a good example. The Nash equilibrium states that player $A$ should immediately take the money on the table, whereas experiments show that humans regularly let the pot build up until a few steps before the end, one of the players realizes what will happen, and takes the majority of the pot. From the perspective of maximizing expected payoffs, it is hard to criticize either player, as each achieved higher payoff from this outcome than they would have in the Nash equilibrium. A theory of bounded rationality takes this at face value, and seeks to build a model for it. With such a model, the hope is to offer general normative guidance for agents with bounded rationality. However, to examine the particular outcome of a centipede game, supposing player $B$ is the one with the minority payoff, we can truly say that $B$ will regret not having taken the majority pot one step earlier, and properly that he \emph{should} have, because then he would have had a higher payoff, and so this outcome is not in subgame perfect equilibrium. If the game is analyzed as a sequence of decisions, the final decision the minority-payoff-receiving player makes is the wrong one, normatively. Bounded rationality with S5 knowledge explains this as bad luck determined by the structure of the game and the first (or second) mover advantage, depending on the players' bounds on epistemic depth. But it is nonetheless true that $B$ could have and should have taken the majority pot one step earlier, and this is not a feature of games with outcomes determined by first (or second) mover advantage, like the game of nim with a 3-4-5 setup (or nim with a 1-3-5-7 setup). 
+Second, the model should make sense from an epistemological stand point, \emph{viz.} the philosophical considerations of epistemologists.
 
+Third, the model should be a sound and complete logical system to serve as a static foundation for a dynamic extension with actions.
 
+A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to be able to determine what to do. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortem's never do any good for their subjects.'
 
-With repeat iterations of the centipede game, each player becomes wise to what is happening, and after a couple iterations the Nash equilibrium is reached. So if you are playing the centipede game against someone unfamiliar with the game, and you plan on playing multiple rounds, you will do better overall to let the pot build for a bit, and then play the Nash equilibrium once the other player figures out the game. Thus, the task of the experienced player is not to reason through the game tree and use backward induction as soon as her bounded rationality allows her to, but rather to determine the opposing player's rationality bound and make her play accordingly. It is a different sort of game. Essentially, the experience player must determine whether the new player is a 2-depth type or a 3-depth type, and how quickly he can learn the trick of the game. 
+% First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
 
-However, what guidance does the theory offer to a human agent playing centipede for the first time? The agent is bounded in how deep she can reason in the game tree, and the opposing player knows the game and so need not reason through it. The game becomes one of 
+Theories of bounded rationality achieve more realism, but the trade off of realism and normativity is not clearly balanced. By keeping the S5 knowledge operator and limiting the agents' epistemic depth, theories of bounded rationality seek to model actual human behavior in the rarefied world of games of perfect information, where the agents know the payoff structure and the game tree or game matrix. This is fine for modeling humans in behavioral economics experiments, where they are sitting at a table with a formal description of the game in front of them. But for the messier world of cockpits, emergency rooms, power plants, and automobiles, this assumption of S5 knowledge fails. The difference is between \emph{closed } worlds and \emph{open} worlds. A formal game environment is a closed world, meaning the human is aware of all of the relevant propositions and their truth values, \emph{i.e.,} the game structure. The real world's environment is an open one, where the set of relevant propositions is a mystery, and the truth values of the propositions known to be relevant is a matter of uncertainty. Thus, the achievement of realism in idealized games translates to little normative value in the real world.
 
-For lower tier theories of bounded rationality with imperfect information, we find agents... 
+%The realism of this latter assumption is dubious, and therefore the theory's applicability is limited. Likewise, theories of bounded rationality with S5 knowledge do not offer clear normative prescriptions or evaluative guidelines. Rather, it appears to be an attempt to makes sense of the following finding of behavioral economics: In some situations, human agents depart from the Nash equilibrium, and they both end up with higher payoffs. The centipede game is a good example. The Nash equilibrium states that player $A$ should immediately take the money on the table, whereas experiments show that humans regularly let the pot build up until a few steps before the end, one of the players realizes what will happen, and takes the majority of the pot. From the perspective of maximizing expected payoffs, it is hard to criticize either player, as each achieved higher payoff from this outcome than they would have in the Nash equilibrium. A theory of bounded rationality takes this at face value, and seeks to build a model for it. With such a model, the hope is to offer general normative guidance for agents with bounded rationality. However, to examine the particular outcome of a centipede game, supposing player $B$ is the one with the minority payoff, we can truly say that $B$ will regret not having taken the majority pot one step earlier, and properly that he \emph{should} have, because then he would have had a higher payoff, and so this outcome is not in subgame perfect equilibrium. If the game is analyzed as a sequence of decisions, the final decision the minority-payoff-receiving player makes is the wrong one, normatively. Bounded rationality with S5 knowledge explains this as bad luck determined by the structure of the game and the first (or second) mover advantage, depending on the players' bounds on epistemic depth. But it is nonetheless true that $B$ could have and should have taken the majority pot one step earlier, and this is not a feature of games with outcomes determined by first (or second) mover advantage, like the game of nim with a 3-4-5 setup (or nim with a 1-3-5-7 setup). 
+
+%With repeat iterations of the centipede game, each player becomes wise to what is happening, and after a couple iterations the Nash equilibrium is reached. So if you are playing the centipede game against someone unfamiliar with the game, and you plan on playing multiple rounds, you will do better overall to let the pot build for a bit, and then play the Nash equilibrium once the other player figures out the game. Thus, the task of the experienced player is not to reason through the game tree and use backward induction as soon as her bounded rationality allows her to, but rather to determine the opposing player's rationality bound and make her play accordingly. It is a different sort of game. Essentially, the experience player must determine whether the new player is a 2-depth type or a 3-depth type, and how quickly he can learn the trick of the game. 
+
+%However, what guidance does the theory offer to a human agent playing centipede for the first time? The agent is bounded in how deep she can reason in the game tree, and the opposing player knows the game and so need not reason through it. The game becomes one of 
+
+%For lower tier theories of bounded rationality with imperfect information, we find agents... 
+
+Other attempts to relax the assumptions of classical game theory abandon the assumption of S5 knowledge and turn toward probability theory in order to capture uncertainty. Uncertainty of various sorts can be adequately modeled in this fashion, including of the game's structure, and the type of the other agents, \emph{e.g.} whether they are a type of agent capable of reasoning 3 epistemic levels deep or merely 2 levels deep. This is realistic for translation to the real world, and normative in that the probabilistic reasoning must abide by the axioms of probability theory. However, humans are not perfect Bayesian reasoners, so this model is unable to formally represent the mistakes humans frequently make when reasoning probabilistically. A realistic model should be able to model mistakes systematically in such a way that valid inferences can be made from mistakes in belief or action.
+
+The model presented here abandons the S5 knowledge assumption in order to model how beliefs and knowledge logically relate for a new type of agent, one level above a normal human agent. This agent knows some things, believes more than she knows, and has false beliefs. She is different from normal humans in that she believes a proposition only if she has a good justification to do so, like the observation of evidence that supports the proposition, or because she believes she has made a valid inference to that proposition. The agent is realistic to the extent that a very careful human reasoner can achieve this level some of the time, when it really matters to do so, and this model is normative to the extent that an agent with more true beliefs about the environment will make better decisions after the dynamic extension of actions is layered on top. We call this agent a Grounded-Coherent Agent (GCA).
+%This model can subsume the models of classical game theory and bounded rationality by turning certain knobs in the metalanguage, and so in that sense the normative aspect can be dialed up at the expense of the ability to model humans who make mistakes. 
+
+For completeness, we describe the lowest tier of model. It is a model of normal human reasoners studied by behavioral economists and psychologists. They believe things based on systemic biases and make no effort to make a belief system consistent or grounded in evidence. Modeling such an agent from a logical standpoint is challenging for obvious reasons, and certainly these models do not pretend to be normative beyond lessons about how reasoning and beliefs can go awry, for example through cognitive biases and fallacious inferences. 
 
 OLD BELOW\\
 This system warrants defending, as John Rushby has recently challenged the decisions. His concerns can be summarized as follows:
