--- a/Chapter_03.tex
+++ b/Chapter_03.tex
@@ -294,7 +294,8 @@ Second, the model should make sense from an epistemological stand point, \emph{v
 
 Third, the model should be a sound and complete logical system to serve as a static foundation for a dynamic extension with actions.
 
-A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to be able to determine what to do. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortem's never do any good for their subjects.'
+\paragraph{Normative-Realism Trade-Off}
+A model of rationality is situated in a spectrum trading off realism for normative evalutation and prescription. A totally idealized model like that of game theory or rational choice theory is entirely normative. There is no doubt that the agents being modeled are not anything like human beings. The model presumes normativity by showing that acting like an ideally rational agent results in optimal payoffs possible. So, for humans who want to optimize their decisions for payoffs, acting like ideally rational agents is best. However, ideally rational agents have properties that real humans lack, so unless a human can run a simulated agent on a correctly formalized model of a situation, she is unlikely to identify the correct action. After the fact, with a correctly formalized model of the situation, her decision can be analyzed in a post-mortem, but post-mortems never do any good for their subjects.
 
 % First, we seek a model that is low on the tiers of rationality, so that it achieves a level of realism suitable for human agents but also maintains some normative prescriptions as a theory of rationality. The S5 common knowledge tier describes the behavior of ideally rational agents, and in this sense is wholly normative. However, this level of rationality is not achievable by human reasoners, due to their limited cognitive capacity. Thus, the theory of S5 common knowledge can serve to evaluate decisions made by human agents, and can realistically model only a very limited space of human behaviors. One would expect, however, that this theory of rationality would be an appropriate balance of realism and normativity for future systems of artificial intelligence. 
 
@@ -314,6 +315,26 @@ The model presented here abandons the S5 knowledge assumption in order to model 
 %This model can subsume the models of classical game theory and bounded rationality by turning certain knobs in the metalanguage, and so in that sense the normative aspect can be dialed up at the expense of the ability to model humans who make mistakes. 
 
 For completeness, we describe the lowest tier of model. It is a model of normal human reasoners studied by behavioral economists and psychologists. They believe things based on systemic biases and make no effort to make a belief system consistent or grounded in evidence. Modeling such an agent from a logical standpoint is challenging for obvious reasons, and certainly these models do not pretend to be normative beyond lessons about how reasoning and beliefs can go awry, for example through cognitive biases and fallacious inferences. 
+
+Along similar lines but in pursuit of different theoretical interests is the so-called Belief-Desire-Intention (BDI) model of action. This model seeks to explain the modules responsible for actions among humans and presumably other potential agents. The model holds that beliefs about the world, desires for how the world could be, and intentions to realize those desired states, are jointly sufficient and individually necessary conditions for actions. This model is related to the GCA model defended here in that its agents can make mistakes due to false beliefs. 
+
+\paragraph{Epistemology}
+A formal epistemic theory should strive for adequate philosophical grounding in good epistemology. Hintikka took this very seriously in his 1967 book on \emph{Knowledge and Belief}~\cite{Hintikka}, which serves as a seminal work in the field of formal epistemology. Hintikka dedicates a great portion of the book to exploring how his formal system handles the intuitive judgments of philosophers regarding ordinary language statements, which was the primary method at the time. An epistemic logic divorced from a philosophical foundation is no longer an epistemic logic for reasoning about human-like knowledge. Some idealized epistemic logics can serve as logics for reasoning about machine knowledge in closed worlds, but as machines come to interact with larger and more complex parts of the world, these idealized logics diminish in adequacy, as computational limitations prevent the machine from implementing even a perfect Bayesian reasoning system. Thus, careful consideration of an epistemic logic's philosophical foundation is in order.
+
+Epistemologists primarily study a theory of knowledge that can rebut the problem of skepticism, and a theory of justification that can avoid Gettier-style counterexamples~\cite{Gettier}. A system of formal epistemology should respect these questions by coherently addressing them as formal theories of epistemology proper. The S5 with common knowledge epistemic logic does not strive for this, nor is it clear that theories of bounded rationality do, either. Recent work in epistemology has applied Bayesian reasoning to the justification problem, and probabilistic epistemic logics help formalize these Bayesian approaches. We briefly recount some broad positions of interest from epistemology that our model should take a considered position on.
+
+%As with Hintikka's work, the test of an epistemic logic's adequacy is its ability to correctly handle touchstone cases from the philosophical literature, or better yet, to adequately explain problems that currently lack convincing explanations. For example, the so-called Moore's sentence is a problem pervasive in epistemology and the philosophy of language, attributed to G.E. Moore~\cite{Moore} by Wittgenstein~\cite{Wittgenstein}. The standard Moore's paradox to be solved is a statement of the form,
+%\begin{center}
+%	\emph{$\varphi$, but I don't believe that $\varphi$.}
+%\end{center}
+
+%The alleged paradox of Moorean sentences is that they are not formal contradictions, but they nonetheless seem like they should be. Hintikka solves this problem by first asserting that his logic is meant for actual communicated statements, not merely sentences, and he distinguishes three new types of implication under study: virtual, epistemic, and doxastic. All implications are established by checking for a model where the antecedent is satisfiable while the consequent is falsifiable. If no such model is possible, then the implication is established. Virtual implication refers to checking for satisfiability of the negated implication in a model. Epistemic implication refers to checking for satisfiability of the negated implication with a knowledge operator distributed over it, and similarly for doxastic implication. Thus, Hintikka solves Moore's paradox by searching for a model that satisfies the above statement. Such a statement is falsifiable, and so virtual implication from $\varphi$ to $\Bels{i}\varphi$ fails. Hintikka turns then to doxastic implication, which involves distributing $\Bels{i}$ over the implication under inspection:
+%\begin{center}
+%	$\Bels{i}\varphi \tland \tlnot \Bels{i}\Bels{i}\varphi$.
+%\end{center}
+
+%This is justified by the principle that people normally believe what they assert as statements. Hintikka's doxastic logic has a transitive doxastic relation, so it takes positive introspection about belief as an axiom, and therefore the above formalization is not satisfiable in a model (and so is doxastically implied). 
+
 
 OLD BELOW\\
 This system warrants defending, as John Rushby has recently challenged the decisions. His concerns can be summarized as follows:
