--- a/Bibliography.tex
+++ b/Bibliography.tex
@@ -25,6 +25,8 @@
 	 	\bibitem{coq_ref}
 	 	Barras, B.; Boutin, S.; Cornes, C.; Courant, J.; Filliatre, J.C.; Gimenez, E.; Herbelin, H.; Huet, G.; Munoz, C.; Murthy, C. and Parent, C. The Coq proof assistant reference manual: Version 6.1 (Doctoral dissertation, Inria). 1997.
 	 	
+	 	\bibitem{Gettier}
+	 	Gettier, E. Is Justified True Belief Knowledge? {\em Analysis} (Vol. 23, pp. 121-123). 1963.
 	 	
 	 	\bibitem{modal} Blackburn, P.; de Rijke, M.; Venema, Y. Modal Logic. Cambridge University Press. New York, 2001.
 	 	\bibitem{PAL} Baltag, A.; Moss, L.; Solecki, S. "The logic of public announcements, common knowledge, and private suspicions." Readings in Formal Epistemology. Springer International Publishing, 2016. 773-812.
@@ -64,6 +66,9 @@
 	 	
 	 	\bibitem{Lenzen}
 	 	Lenzen, W. Recent work in epistemic logic. {\em Acta Philosophica Fennica} {\bf 1972}, {\em 30(1)}: 1-219.
+	 	
+	 	\bibitem{Moore}
+	 	Moore, G.E. "Moore's Paradox. In Baldwin, T. {\em G.E. Moore: Selected Writings.} London: Routledge {\bf 1993}.
 	 	
 	 	\bibitem{negri}
 	 	Negri, S. Kripke completeness revisited. {\em Acts of Knowledge: History, Philosophy and Logic: Essays Dedicated to G{\"o}ran Sundholm} {\bf 2009}, 247-282.
@@ -150,4 +155,7 @@
 	 	
 	 	\bibitem{vonWright}
 	 	von Wright, G.H.. ``An Essay on Modal Logic." Amsterdam: North-Holland Publishing Company. 1951.
+	 	
+	 	\bibitem{Wittgenstein}
+	 	Wittgeinstein, L. ``Philosophical Investigations." Blackwell Publishers. 1953.
 \end{thebibliography}
